@@ -1,3 +1,9 @@
+*gitlab-shell-3.6.6 (22 Oct 2016)
+
+  22 Oct 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.6.6.ebuild:
+  dev-vcs/gitlab-shell:  added ebuild for version 3.6.6, which is a dependency
+  of gitlab-ce-8.13.0
+
   23 Sep 2016; Manuel Friedli <manuel@fritteli.ch> -gitlab-shell-3.2.1.ebuild:
   dev-vcs/gitlab-shell:  removed obsolete version 3.2.1
 
